yamls/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: vdocker0123/todo-db:v1
        resources: {}
          # limits:
          #   memory: "128Mi"
          #   cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pg-config-volume
          mountPath: /hello
        - name: pg-secret-volume
          mountPath: /etc/todo/secret
          readOnly: true

      volumes:
      - name: pg-config-volume
        configMap:
          name: todo-configmap
      - name: pg-secret-volume
        secret:
          secretName: todo-go-secret

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres-public-service
# spec:
#   selector:
#     app: postgres
#   type: LoadBalancer
#   ports:
#   - port: 5432
#     targetPort: 5432
#     nodePort: 30002
