yamls/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  labels:
    name: todo-ingress
spec:
  rules:
  - host: my-todo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-go-service
            port: 
              number: 8080
